# swatchrig

./: .gitignore  main.py  pyproject.toml
extras/: Raspberry Pi High Quality Camera 2.dcp  Raspberry Pi High Quality Camera.dcp  build.sh  converting.py  error.py  mainscreen.py  processing.py  profile.json  profile2.json  swatchrig.service  sync_to_storagebox.sh  uploading.py  utils.py
