[tool.poetry]
name = "swatchrig"
version = "0.1.0"
description = "The scripts that run the swatchrig."
authors = ["Joe Kaufeld <joe.kaufeld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gpiozero = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
