[tool.poetry]
name = "swatchrig"
version = "0.1.0"
description = "The scripts that run the swatchrig."
authors = ["Joe Kaufeld <joe.kaufeld@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gpiozero = "^1.5.1"
"RPi.GPIO" = "^0.7.0"
spidev = "^3.5"
pidng = {git = "https://github.com/itsthejoker/PiDNG", tag = "v4.0.3"}
addict = "^2.4.0"
picamera2 = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
